--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,12 +10,12 @@
     <br><br><br><br>
     <div class="row" >
       
-      <div class="col-sm-7" id="imgsetting">
+      <div class="col-sm-7 col-xs-12" id="imgsetting">
         <img src="/images/natureReachfornpage.png" width="800" height="550" alt="Nature Reach">
   
       </div>
 
-      <div class="col-sm-4" >
+      <div class="col-sm-4 col-xs-12" >
 
         <br><br><br><br>
         <h3>Welcome to Nature Reach</h3>
