--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,17 +5,22 @@
 
 <body style="background-image: url('/images/frontPageBackground.PNG');">
 
-  
+  <style>
+    img.test {
+    width: 100%;
+    height: auto;
+}
+  </style>
 
     <br><br><br><br>
     <div class="row" >
       
-      <div class="col-sm-7 col-xs-12" id="imgsetting">
-        <img src="/images/natureReachfornpage.png" width="800" height="550" alt="Nature Reach">
+      <div class="col-sm-7 col-xs-7" id="imgsetting">
+        <img class= "test" src="/images/natureReachfornpage.png"  alt="Nature Reach">
   
       </div>
 
-      <div class="col-sm-4 col-xs-12" >
+      <div class="col-sm-4 col-xs-4" >
 
         <br><br><br><br>
         <h3>Welcome to Nature Reach</h3>
